--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,10 +67,11 @@
         android:id="@+id/et_num_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_below="@id/tv_num_account"
-        android:hint="@string/et_num_account"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="@string/et_num_account"
+        android:inputType="number" />
 
     <TextView
         android:id="@+id/tv_date_born"
@@ -85,10 +86,11 @@
         android:id="@+id/dp_calendar"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
-        android:datePickerMode="spinner"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"
+        android:datePickerMode="spinner"
+        android:calendarViewShown="false"
         android:layout_below="@+id/tv_date_born">
     </DatePicker>
 
