--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -79,6 +79,7 @@
         android:layout_below="@+id/tv_age" />
 
     <ImageView
+        android:id="@+id/iv_image"
         android:layout_below="@+id/tv_career"
         android:layout_width="match_parent"
         android:layout_marginRight="25dp"
